# class-codes-2021-2

./: README.md
brincando-com-imagens-e-streamlit/: README.md  pyproject.toml  requirements.txt
brincando-com-imagens-e-streamlit/brincando_com_imagens_e_streamlit/: app.py
brincando-com-imagens-e-streamlit/tests/: test_brincando_com_imagens_e_streamlit.py
