[tool.poetry]
name = "brincando-com-imagens-e-streamlit"
version = "0.1.0"
description = ""
authors = ["Mario H. Adaniya <mhadaniya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.89.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
